# RAG

./: .gitignore  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
apps/senpy-ai-news-report/: Dockerfile  Dockerfile.cron  README.md  debug-fastapi-server.sh  docker-compose.yml  pyproject.toml
apps/senpy-ai-news-report/crons/: __main__.py  feeds_cron.py  github_trends_cron.py  scheduler.py
apps/senpy-ai-news-report/senpy_ai_chatbot/features/news/article_based_post/: article_prompts.py
apps/senpy-ai-news-report/senpy_ai_chatbot/features/telegram_integration_features/: send_channel_message.py
apps/senpy-ai-news-report/senpy_ai_chatbot/utils/: serializable_dataclass.py
apps/senpy-ai-news-report/senpy_ai_news_report/: main.py
apps/senpy-ai-news-report/senpy_ai_news_report/features/ai/: openai_client.py
apps/senpy-ai-news-report/senpy_ai_news_report/features/cron/: router.py
apps/senpy-ai-news-report/senpy_ai_news_report/features/news/: router.py
apps/senpy-ai-news-report/senpy_ai_news_report/features/news/article_based_post/: article_based_post.py  post_article.py
apps/senpy-ai-news-report/senpy_ai_news_report/features/news/github_trending/: github_trends_searcher.py  post_github_trends.py  process_github_trends_with_ai.py
apps/senpy-ai-news-report/senpy_ai_news_report/features/news/rss/: feed_parser.py  rss_feeds.py
apps/senpy-ai-news-report/senpy_ai_news_report/features/telegram_integration_features/: send_scheduled_message_to_channel.py
apps/senpy-ai-news-report/senpy_ai_news_report/utils/: auth.py
(+42 files in other folders)
